Organize in cabal package

--- a/implementation/while/while.cabal
+++ b/implementation/while/while.cabal
@@ -1,111 +1,32 @@
 name: while
 version: 0.0.1
 cabal-version: -any
-build-type: Configure
+build-type: Simple
 license: AllRightsReserved
 license-file: ""
 copyright:
 maintainer:
-build-depends: HUnit -any, HUnit -any, HUnit -any, base -any,
-               base -any, base -any, parsec -any, parsec -any, parsec -any
+build-depends: HUnit -any, base -any, parsec -any, haskell98 -any, mtl -any,
+				containers -any
 stability: None whatsoever
 homepage:
 package-url:
 bug-reports:
 synopsis: Implementation of the while language
-description: .
-             .
-             .
-category:
-author:
-tested-with:
-data-files:
-data-dir: ""
-extra-source-files:
-extra-tmp-files:
-exposed-modules: While
-exposed: True
-buildable: True
-build-tools:
-cpp-options:
-cc-options:
-ld-options:
-pkgconfig-depends:
-frameworks:
-c-sources:
-default-language:
-other-languages:
-default-extensions:
-other-extensions:
-extensions:
-extra-libraries:
-extra-lib-dirs:
-includes:
-install-includes:
-include-dirs:
-hs-source-dirs: src
-other-modules:
-ghc-prof-options:
-ghc-shared-options:
-ghc-options:
-hugs-options:
-nhc98-options:
-jhc-options:
+description: Implements the very basic programming language WHILE.
+				It is useful for computability introductions.
  
-executable: while
-main-is: Main.hs
+executable: while-data
+main-is: data.hs
 buildable: True
-build-tools:
-cpp-options:
-cc-options:
-ld-options:
-pkgconfig-depends:
-frameworks:
-c-sources:
-default-language:
-other-languages:
-default-extensions:
-other-extensions:
-extensions:
-extra-libraries:
-extra-lib-dirs:
-includes:
-install-includes:
-include-dirs:
-hs-source-dirs: src
-other-modules:
-ghc-prof-options:
-ghc-shared-options:
-ghc-options:
-hugs-options:
-nhc98-options:
-jhc-options:
+hs-source-dirs: src,src/While
  
 executable: parser
-main-is: Parser.hs
+main-is: statement.hs
 buildable: True
-build-tools:
-cpp-options:
-cc-options:
-ld-options:
-pkgconfig-depends:
-frameworks:
-c-sources:
-default-language:
-other-languages:
-default-extensions:
-other-extensions:
-extensions:
-extra-libraries:
-extra-lib-dirs:
-includes:
-install-includes:
-include-dirs: .
-hs-source-dirs: src
-other-modules:
-ghc-prof-options:
-ghc-shared-options:
-ghc-options:
-hugs-options:
-nhc98-options:
-jhc-options:
+hs-source-dirs: src, src/While
+
+executable: eval-while
+main-is: eval.hs
+buildable: True
+hs-source-dirs: src, src/While
