--- a/implementation/Makefile
+++ b/implementation/Makefile
@@ -1,2 +1,8 @@
-.PHONY:
-	true
+.PHONY: turing while
+
+turing:
+	echo "Bulding Turing"
+	cd turing; $(MAKE) $(MFLAGS)
+while:
+	echo "Bulding While"
+	cd while; $(MAKE) $(MFLAGS)
